<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/motorola_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/motorola_logo"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="368dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/shared_pref_message"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Type a Number"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/buttonReadSharedPref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="ReadSharedPreferences"
            android:text="@string/read_shared_pref"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/buttonWriteSharedPref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="StoreSharedPref"
            android:text="@string/write_shared_pref"
            app:layout_constraintStart_toEndOf="@+id/buttonReadSharedPref"
            app:layout_constraintTop_toTopOf="@+id/buttonReadSharedPref"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="350dp"
            android:layout_height="57dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/db_fields_guide"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/buttonReadSharedPref"
            app:layout_constraintTop_toBottomOf="@+id/buttonReadSharedPref" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/database_name"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/editTextPhone"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/phone_number"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonName" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonName" />

        <Button
            android:id="@+id/buttonStoreInDb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="StoreInDatabase"
            android:text="@string/store_in_db"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/prop_value"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/buttonStoreInDb" />

        <EditText
            android:id="@+id/propNewValue"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="WriteProperty"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/buttonStoreInDb"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/readPropButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:onClick="ReadProperty"
            android:text="@string/read_prop_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/writePropButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="WriteProperty"
            android:text="@string/write_prop_value"
            app:layout_constraintStart_toEndOf="@+id/readPropButton"
            app:layout_constraintTop_toTopOf="@+id/readPropButton"
            tools:ignore="UsingOnClickInXml" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>